--- a/src/firebase/configs.json
+++ b/src/firebase/configs.json
@@ -1,7 +1,7 @@
 {
   "common": {
     "contactData": {
-      "title": "servitec facil factura",
+      "name": "servitec facil factura",
       "emails": {
         "sales": "contactos@servitec-peru.com"
       },
@@ -22,41 +22,35 @@
         "local2": "-"
       },
       "poweredBy": {
-        "name": "Agencia Servitec",
+        "name": "AgenciaServitec",
         "webUrl": "https://agenciaservitec.com"
       }
     }
   },
   "development": {
-    "version": "0.0.1",
+    "version": "0.0.2",
     "firebaseApp": {
-      "apiKey": "-",
-      "authDomain": "-",
-      "projectId": "-",
-      "storageBucket": "-",
-      "messagingSenderId": "-",
-      "appId": "-",
-      "measurementId": "-"
+      "apiKey": "AIzaSyCmXqrTJjNxX-7gEby6fXH0pTkrQjmeEsc",
+      "authDomain": "all-in-one-364723.firebaseapp.com",
+      "projectId": "all-in-one-364723",
+      "storageBucket": "all-in-one-364723.appspot.com",
+      "messagingSenderId": "104300187793",
+      "appId": "1:104300187793:web:b4f6c781557a58147f2f30",
+      "measurementId": "G-FTDQHJLNHS"
     },
-    "buckets": {},
-    "apiUrl": "-",
-    "sendingEmailsApiUrl": "-",
-    "ipInfoApi": "-"
+    "buckets": {}
   },
   "production": {
-    "version": "0.0.1",
+    "version": "0.0.2",
     "firebaseApp": {
-      "apiKey": "-",
-      "authDomain": "-",
-      "projectId": "-",
-      "storageBucket": "-",
-      "messagingSenderId": "-",
-      "appId": "-",
-      "measurementId": "-"
+      "apiKey": "AIzaSyCmXqrTJjNxX-7gEby6fXH0pTkrQjmeEsc",
+      "authDomain": "all-in-one-364723.firebaseapp.com",
+      "projectId": "all-in-one-364723",
+      "storageBucket": "all-in-one-364723.appspot.com",
+      "messagingSenderId": "104300187793",
+      "appId": "1:104300187793:web:b4f6c781557a58147f2f30",
+      "measurementId": "G-FTDQHJLNHS"
     },
-    "buckets": {},
-    "apiUrl": "-",
-    "sendingEmailsApiUrl": "https://us-central1-sendingemails-348505.cloudfunctions.net/api",
-    "ipInfoApi": "-"
+    "buckets": {}
   }
 }
