modify AboutUs.js Footer.js folder multimedia

--- a/src/firebase/configs.json
+++ b/src/firebase/configs.json
@@ -22,8 +22,8 @@
         "local2": "-"
       },
       "poweredBy": {
-        "name": "AgenciaServitec",
-        "webUrl": "https://agenciaservitec.com"
+        "name": "ServitecSite",
+        "webUrl": "https://servitec.site"
       }
     }
   },
