--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@hookform/resolvers": "^2.9.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.7",
-    "react-helmet": "^6.1.0",
     "firebase": "^8.2.7",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -26,11 +26,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^3.0.4",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.33.1",
-    "@hookform/resolvers": "^2.9.3",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "url-assembler": "^2.1.1",
     "web-vitals": "^2.1.4",
